# happymimi_recognition

./: README.md  falling_down.py
happymimi_recognition/: CMakeLists.txt  package.xml
happymimi_recognition_msgs/: CMakeLists.txt  package.xml
happymimi_recognition_msgs/action/: PubObjectTF.action  RecognitionProcessing.action
happymimi_recognition_msgs/srv/: AddvancedLocalize.srv  CameraImage.srv  LeftRight2xyz.srv  MotionBool.srv  PositionEstimatorPCL.srv  RecognitionCount.srv  RecognitionList.srv  RecognitionLocalize.srv  UOR.srv  UorClip.srv  UorGpt.srv  UorToGrasp.srv  UorVlm.srv  UorYolo.srv  depth_meter.srv
person_feature_extraction/: CMakeLists.txt  README.md  package.xml
person_feature_extraction/src/: color_exchange.py  detect_cloth_color.py  detect_clothing_color.py  detect_gender.py  detect_glass.py  detect_hair_color.py  detect_old.py  detect_pants_color.py  detect_skin_color.py  detect_skin_colorv2.py  falling_down.py  height_estimation.py  mimi_color.py  motion_detection.py
person_feature_extraction/src2/: ITT.py  README.md  gpt2_exam_image.py  gpt2_exam_realsense.py  mtcnn_sample.py
recognition_falling_down/: CMakeLists.txt  package.xml
recognition_processing/: CMakeLists.txt  README.md  package.xml
recognition_processing/launch/: recognition_processing.launch  recognition_processing_yolov8.launch  test.launch
recognition_processing/param/: yolo_v8_object_id.yaml
recognition_processing/point_cloud/: point_estimation.cpp  point_estimation_sample.cpp  point_sample.cpp  point_view.cpp
recognition_processing/src/: camera_module.py  depthMask.py  detectLRHands.py  directon_finder.py  find_bag_recognition.py  height_estimation.py  mask_person.py  object_recognizer.py  raise_your_hands.py  raise_your_hands_twoPerson.py  recognition_action_server.py  recognition_action_server_v8.py  recognition_tools.py  recognition_tools_v8.py
three_dimensional_data_processing/: CMakeLists.txt  README.md  package.xml
three_dimensional_data_processing/launch/: point_cloud.launch  rs_camera_point.launch  three_dimensional_data_processing.launch
three_dimensional_data_processing/script/: object_coord_generator.py  pub_object_tf.py
three_dimensional_data_processing/src/: position_estimator.cpp  three_dimensional_position_estimator.cpp
unknown_object_recognition/: CMakeLists.txt  README.md  package.xml
unknown_object_recognition/config/: item_category.yaml  object_class_list.yaml  pcp_config.yaml  prompt_tmp.yaml  uor_item_category_gpsr.yaml  uor_model.yaml  uor_object_location.yaml  uor_server_config.yaml
unknown_object_recognition/launch/: tu_launch.launch  view_d435_model_rviz_gazebo.launch
unknown_object_recognition/script/: 4v_preview.py  clip_module.py  image_module.py  image_server.py  label_prompt.py  label_tmp.py  oc_blip_server.py  pc_debug.py  pc_module.py  prompt_module.py  prompt_tmp.py  table_object_server.py  uoc_clip_server.py  uoc_yolo_server.py  uor_clip_server.py  uor_gemini_server.py  uor_gpt_server.py  uor_module.py  uor_yolo_server.py  yolo.py  yolow_server.py
unknown_object_recognition/src/: downsampling.cpp  point_cloud_processor.cpp  table_object_recognizer.cpp
