<?xml version="1.0"?>
<package format="2">
  <name>three_dimensional_data_processing</name>
  <version>0.0.0</version>
  <description>The three_dimensional_data_processing package</description>

  <maintainer email="tatsuhito@todo.todo">tatsuhito</maintainer>


  <license>TODO</license>


  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>happymimi_msgs</build_depend>
  <build_depend>happymimi_recognition_msgs</build_depend>

  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>actionlib</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>happymimi_msgs</build_export_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>actionlib</exec_depend>
  <exec_depend>happymimi_msgs</exec_depend>

  <export>

  </export>
</package>
